# podcast-job-finder

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  README.md  company_extraction.py  episode_company_runner.py  episode_processing_pipeline.py  extract_episode_companies.py  extract_xiaoyuzhou_episode.py  llm_checkpoint_store.py  logging_config.py  openai_compatible_llm.py  pid_audio_transcription.py  pid_company_report.py  pyproject.toml  pyrightconfig.json  segment_transcription_checkpoints.py  tracing.py  transcribe_audio.py  vulture_whitelist.py  xiaoyuzhou_auth_store.py  xiaoyuzhou_xyz_client.py
podcast_job_finder/: __init__.py  filesystem.py  logging.py  progress.py  runtime_signature.py  timestamps.py
podcast_job_finder/audio/: __init__.py  _ffmpeg.py  _pcm.py  _segment_split.py  file_segments.py  normalized_audio.py  pcm_decode.py  pid_transcription.py  segment_export.py  speech_pipeline.py  transcription.py  transcription_checkpoint.py  transcription_manifest.py  vad.py
podcast_job_finder/cli/: companies.py  download_audio.py  inspect_episode.py  split_audio.py  transcribe.py
podcast_job_finder/companies/: __init__.py  audio_pipeline.py  candidate_merge.py  checkpoint.py  episode_runner.py  extraction.py  models.py  pipeline.py  rate_limit.py  reporting.py  runtime.py  transcript_chunks.py  transcript_extraction.py
podcast_job_finder/http/: __init__.py  user_agents.py
podcast_job_finder/llm/: __init__.py  client.py  config.py  errors.py  retry.py
podcast_job_finder/xiaoyuzhou/: __init__.py  _audio_errors.py  _audio_files.py  _audio_http.py  download_audio.py  episode_audio.py  episode_client.py  episode_page.py  episode_parser.py  models.py
podcast_job_finder/xiaoyuzhou/episode_audio/: __init__.py  files.py  http.py  service.py
podcast_job_finder/xiaoyuzhou/xyz/: __init__.py  auth_store.py  client.py  debug.py  models.py  podcast_service.py
tools/: vulture_whitelist.py
