[project]
name = "podcast-job-finder"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "requests>=2.34.2",
    "ten-vad>=1.0.6.8",
]

[project.scripts]
podcast-download-audio = "podcast_job_finder.cli.download_audio:main"
podcast-find-jobs = "podcast_job_finder.cli.companies:main"
podcast-inspect-episode = "podcast_job_finder.cli.inspect_episode:main"
podcast-split-audio = "podcast_job_finder.cli.split_audio:main"
podcast-transcribe = "podcast_job_finder.cli.transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pre-commit>=3.0.0",
  "pylint>=4.0.6",
  "pyright>=1.1.411",
]

[tool.mypy]
python_version = "3.14"
files = ["."]
warn_unreachable = true
exclude = '(^\.venv/|^output/|^\.git/|^\.mypy_cache/|^\.ruff_cache/)'

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
  "C90",
  "E4",
  "E7",
  "E9",
  "F",
  "SIM",
]
ignore = [
  "SIM105",
  "SIM108",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.vulture]
paths = ["."]
exclude = [
  "*/.venv/*",
  "*/output/*",
]
min_confidence = 80
sort_by_size = true
